Added user and borrowings

--- a/BookStoreApp/appsettings.json
+++ b/BookStoreApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PrintOrderContext": "Server=Prince\\SQLEXPRESS;Database=PrintOrderDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BookStoreAppContext": "Server=Prince\\SQLEXPRESS;Database=BookStoreAppDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
