Added books data set excel import functionality

--- a/BookStoreApp/BookStoreApp.csproj
+++ b/BookStoreApp/BookStoreApp.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\files\Sample_Book_Data_set.xlsx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.104.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.35" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.35" />
@@ -21,6 +25,10 @@
   <ItemGroup>
     <Folder Include="Helper\" />
     <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\files\Sample_Book_Data_set.xlsx" />
   </ItemGroup>
 
 </Project>
