--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Build with dotnet
+        run: dotnet build --configuration Release
       
       - name: Build project
         run: dotnet publish -c Release
