--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: BookStoreApp/bin/Release/net6.0/publish/
+          local-dir: BookStoreApp/bin/Release/net6.0/PubTmp/Out/
